# udacity-deep-learning

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .yamllint  Makefile  pyproject.toml  requirements.txt
assignment-1/: 1-handwritten-digits-classifier.ipynb
assignment-1/notebooks/exercises/: 0-torch-basics.ipynb  1-torch-data-preprocessing.ipynb  2-numpy-logistic-regression.ipynb  3-numpy-forward-pass.ipynb  4-numpy-backpropagation.ipynb
assignment-1/src/: utils.py
assignment-2/: app.ipynb  cnn_from_scratch copy.ipynb  cnn_from_scratch.ipynb  transfer_learning.ipynb
assignment-2/src/: data.py  helpers.py  model.py  optimization.py  predictor.py  train.py  transfer.py
notebooks/: 1-handwritten-digits-classifier.ipynb  1-handwritten-digits-classifier.py
src/: __version__.py  models.py  utils.py
src/udacity_deep_learning/: models.py  utils.py
