[project]
name = "udacity-deep-learning"
description = "Repository for the Udacity Deep Learning Nanodegree program."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12, <3.13"
authors = [
    {name = "Roberto Fierimonte", email = "roberto.fierimonte@gmail.com>"},
]
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "mlflow>=3.10.0",
    "numpy>=2.4.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0",
]

[project.urls]
source = "https://github.com/robertofierimonte/udacity-computer-vision"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "F821"]

[tool.uv]
required-version = ">=0.9.0"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.7",
    "pre-commit>=4.5.0",
    "seaborn>=0.13.2",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-randomly>=4.0.1",
]
